src/objects/PSA_Billing_Event_Expense_Receipt_Docs__c.object
<CustomObject>
    <description>An object which contains a lookup to a URL of an attachment as well as the Billing Event to which&apos;s chatter feed it is attached.</description>
    <fields>
        <fullName>PSA_Attachment_Ids__c</fullName>
        <label>PSA Attachment Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The billing event which owns the chatter feed that the URL object is attached to</description>
        <label>PSA Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>PSA Billing Event Expense Receipt Docs</relationshipLabel>
        <relationshipName>PSA_Billing_Event_Expense_Receipt_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Receipt_URL__c</fullName>
        <description>The URL of the attachment which is on the billing event&apos;s chatter feed</description>
        <label>PSA Expense Receipt URL</label>
        <type>Url</type>
    </fields>
    <label>PSA Billing Event Expense Receipt Docs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PSA Billing Event Expense Receipt Docs N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Billing Event Expense Receipt Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>